[tool.poetry]
name = "eden-example"
version = "0.1.0"
description = ""
authors = ["mrtedn21 <bezgin.sasha06@gmail.com>"]
readme = "README.md"
packages = [{include = "eden_example"}]

[tool.poetry.dependencies]
python = "^3.11"
martin-eden = "0.11.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
